# FCH_predictive_model

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run_model.py
app/core/: domain_initializer.py  pressure_drop_calculator.py  results_compiler.py
app/scripts/: run_model_single.py
app/utils/: model_output.py  psychrometric_functions.py
fch_predictive_model/config/: config.yaml
fch_predictive_model/core/: model.py  model_trainer.py  parameter_calculator.py
fch_predictive_model/docs/: performance_results_template.xlsx
fch_predictive_model/scripts/: run_model_single.py
fch_predictive_model/tests/: test_model.py
templates/: index.html
